fix: adjust z-index to 800 for better layering of elements

--- a/src/app/layout/calendar/components/select-custom/select-custom.component.css
+++ b/src/app/layout/calendar/components/select-custom/select-custom.component.css
@@ -11,6 +11,7 @@
 }
 
 .select__list {
+    z-index: 800;
     list-style: none;
     position: absolute;
     top: 120%;
